--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Modern UI Components - Demonstração</title>
-    <link rel="stylesheet" href="../src/modern-ui.css">
+    <link rel="stylesheet" href="src/modern-ui.css">
     <style>
         body {
             padding: var(--spacing-xl);
